# staticDB

./: .gitignore  CMakeLists.txt  ChangesLog.txt  LICENSE  README.md  StaticDb.docx  debugger.xml  filetypes.xml  find.xml  gmon.out  ide.general.xml  main.cpp  markdown.xml  other.xml  staticDB.cbp  staticDB.cscope_file_list  staticDB.depend  staticDB.layout  staticDB_utility.py  testdb  vcs.xml  version.h
Python Driver/: StaticDB.py  staticDB.pyd  stressTest.py  testModule.py  testdb.sdb
Python Driver/Cython_src/: CDatabase.pxd  CMakeLists.txt  build.txt  cython_setup.py  cython_statidb.cbp  cython_statidb.depend  cython_statidb.layout  staticDB  staticDB.cpp  staticDB.html  staticDB.pyx  staticDb.pyx
UML/: LogicDiagram  PDS  StaticDB.xml
colors/: _@user_Blackboard.icls  _@user_Darcula.icls  _@user_Dawn.icls  _@user_Default.icls  _@user_Xcode.icls
cython/dev/: cython_build.dev  cython_build.layout  dllmain.c  libtest.def  main.cpp  python_my.dev  python_my.layout  test.pyd
cython_statidb/: cython_statidb.cbp  cython_statidb.layout  db_tuple_module.pxd  libstaticDB.def  marshal.pxd  staticDB.cpp  staticDB.html  testcython.py  testdb.sdb  tst.cbp  tst.depend  tst.layout
include/: Database.h  JsonStore.h  Parser.h  StringMapper.h  array.h  base.h  common.h  dataBase.h  db_tuple.h  fileObj.h  files.h  formatter.h  json.hpp  marshal.h  pairs.h  parser.h  query.h  sdbdefs.h  staticDB.hpp  table.h  type2file.h  typecode.h  utility.h
include/PhysicalLayer/: Base.h  DataManager.h  DataNode.h  FreeList.h  Utility.h  fileObj.h
include/PhysicalLayer/file/: File_Struct.hpp  File_stdio.hpp
mysite/: client_test.py  db.sqlite3  testdb.sdb  testdb_client.sdb
mysite/myDB/: apps.py  testcython.py  urls.py  views.py
mysite/myDB/static/myDB/: codemirror.css  codemirror.js  prism.css  prism.js  sql-hint.js  sql.js
mysite/myDB/staticDB/: Database.py  __init__.py  staticDB.pyd
mysite/myDB/templates/myDB/: layout.html  login.html  staticDB.html
mysite/mysite/: settings.py  urls.py
src/: CommonUtil.h  Compiler.h  Constants.h  Database.h  JsonStore.h  Parser.h  SDB_Error.cpp  StringMapper.h  SymbolTree.h  array.cpp  base.cpp  common.cpp  dataBase.cpp  db_tuple.cpp  fileObj.cpp  files.cpp  formatter.cpp  json.hpp  marshal.cpp  pairs.cpp  parser.cpp  query.cpp  sdbdefs.cpp  staticDB.cpp  table.cpp  tuple.cpp  utility.cpp  version.h
src/Engine/: Base.h  DataNode.h  FreeList.h  SDB_Error.h  Utility.h
src/Engine/file/: File.hpp  File_SDL.hpp
src/Intefaces/: TokenInterface.h
src/PhysicalLayer/: DataManager.h  FreeNode.h  Utility.h
src/Structures/: SymbolTreeNode.h
src/Tokens/: BasicTokens.h  TokenDeclarations.h
tests/: DataManager.cpp  FileLayer.cpp  JsonStore.cpp  ParserTest.cpp  StringMapperTest.cpp  testdb
